footer blog removed for api purpose

--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,14 @@
       Expert Home Repair, Maintenance & Improvement Services | Plumbing,
       Electrical, Carpentry & More
     </title>
-    <meta
+    <!-- <meta
       name="description"
       content="Get professional home repair and maintenance services at your doorstep. From plumbing and electrical repairs to appliance fixes, painting, carpentry, and flooring—our expert team covers all your home needs. Book trusted professionals for hassle-free, top-quality service."
     />
     <meta
       name="keywords"
       content="home repair, maintenance services, plumbing services, electrical services, appliance repair, carpentry services, flooring services, painting services, pipe repair, toilet repair, wiring installation, outlet replacement, refrigerator repair, custom cabinets, interior painting, floor installation, expert home improvement"
-    />
+    /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
