tag added 404 changed

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,22 @@
       })(window, document, "script", "dataLayer", "GTM-PQD3L979");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=AW-11461761942"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "AW-11461761942");
+    </script>
+    <!-- End Google tag (gtag.js) -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
