--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
     /> -->
 
     <!-- Google Tag Manager -->
+    <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -71,8 +72,9 @@
         j.async = true;
         j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
         f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-PQD3L979");
+      })(window, document, "script", "dataLayer", "GTM-PQWL327M");
     </script>
+    <!-- End Google Tag Manager -->
     <!-- End Google Tag Manager -->
 
     <!-- Google tag (gtag.js) -->
@@ -96,7 +98,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-PQD3L979"
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PQWL327M"
         height="0"
         width="0"
         style="display: none; visibility: hidden"
